--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 
   <div class="toast" id="toast"></div>
 
-  <script src="game.js"></script>
+  <script type="module" src="game.js"></script>
+  <button id="btnLogin">Entrar com Google</button>
+<button id="btnLogout" style="display:none;">Sair</button>
+
+<div id="userBox" style="display:none;">
+  Logado como: <span id="userName"></span>
+</div>
+
 </body>
 </html>
