Add email/password auth to login

--- a/index.html
+++ b/index.html
@@ -45,7 +45,31 @@
       <p class="login-subtitle">Conecte sua conta para entrar nas ruínas.</p>
 
       <div class="login-actions" id="loginActions">
-        <button class="btn btn-primary" id="btnLogin">Entrar com Google</button>
+        <div class="login-section">
+          <p class="login-section-title">Entrar com Google</p>
+          <button class="btn btn-primary" id="btnLogin">Entrar com Google</button>
+        </div>
+
+        <div class="login-divider"><span>ou</span></div>
+
+        <div class="login-section">
+          <p class="login-section-title">Email e senha</p>
+          <div class="login-field">
+            <label for="inputEmail">Email</label>
+            <input id="inputEmail" type="email" autocomplete="email" placeholder="seu@email.com" />
+          </div>
+          <div class="login-field">
+            <label for="inputPassword">Senha</label>
+            <input id="inputPassword" type="password" autocomplete="current-password" placeholder="••••••••" />
+          </div>
+          <div class="login-buttons">
+            <button class="btn btn-primary" id="btnEmailLogin">Entrar</button>
+            <button class="btn btn-ghost" id="btnEmailCreate">Criar conta</button>
+          </div>
+          <button class="btn btn-link" id="btnEmailReset" type="button">Esqueci minha senha</button>
+          <p class="login-status" id="emailStatus">Digite seu email para recuperar a senha.</p>
+        </div>
+
         <p class="login-status" id="loginStatus">Aguardando autenticação.</p>
       </div>
 
