Add Estus flask drinking and HUD

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
 
     <div class="row">
       <div class="pill">Souls: <span id="soulsText">0</span></div>
+      <div class="pill">Estus: <span id="estusText">0/0</span></div>
       <div class="pill">Checkpoint: <span id="cpText">—</span></div>
       <div class="pill" id="fpsPill">FPS: <span id="fpsText">0</span></div>
     </div>
 
     <div class="help">
       <b>Controles</b>:
-      A/D ou ←/→ mover • W/↑/Espaço pular • J atacar • K rolar • E descansar (bonfire) • R reiniciar
+      A/D ou ←/→ mover • W/↑/Espaço pular • J atacar • K rolar • Q beber Estus • E descansar (bonfire) • R reiniciar
     </div>
   </div>
 
