Add hit feedback effects

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   </div>
 
   <canvas id="game" width="960" height="540" aria-label="Soulslike 2D"></canvas>
+  <div class="damage-flash" id="damageFlash" aria-hidden="true"></div>
 
   <div class="menu-screen hidden" id="menuScreen" aria-live="polite">
     <div class="menu-fog"></div>
