Add multi-room map and boss arena

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
     </div>
   </div>
 
+  <div class="boss-bar hidden" id="bossBar" aria-live="polite">
+    <div class="boss-name">O PENITENTE DE FERRO</div>
+    <div class="boss-track">
+      <div id="bossHpFill" class="boss-fill"></div>
+    </div>
+  </div>
+
   <canvas id="game" width="960" height="540" aria-label="Soulslike 2D"></canvas>
   <div class="damage-flash" id="damageFlash" aria-hidden="true"></div>
 
