Add loot pickups, drops, and inventory interactions

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="help">
       <b>Controles</b>:
-      A/D ou ←/→ mover • W/↑/Espaço pular • J atacar • K rolar • L aparar • Q beber Estus • TAB inventário • E descansar (bonfire) • R reiniciar
+      A/D ou ←/→ mover • W/↑/Espaço pular • J atacar • K rolar • L aparar • Q beber Estus • TAB inventário • E interagir/coletar • R reiniciar
     </div>
   </div>
 
@@ -71,7 +71,7 @@
         </ul>
         <div class="inventory-details" id="inventoryDetails"></div>
       </div>
-      <div class="inventory-hint">↑ ↓ navegar • Enter equipar • Esc sair</div>
+      <div class="inventory-hint">↑ ↓ navegar • Enter equipar • Clique para detalhes • Esc sair</div>
     </div>
   </div>
 
