Implement metroidvania world zones

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="pill">Souls: <span id="soulsText">0</span></div>
       <div class="pill">Estus: <span id="estusText">0/0</span></div>
       <div class="pill">Checkpoint: <span id="cpText">—</span></div>
+      <div class="pill">Zona: <span id="zoneText">—</span></div>
       <div class="pill" id="fpsPill">FPS: <span id="fpsText">0</span></div>
     </div>
 
