Add fog, sprint, and progression gates

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="help">
       <b>Controles</b>:
-      A/D ou ←/→ mover • W/↑/Espaço pular • J atacar • K rolar • L aparar • Q beber Estus • TAB inventário • E interagir/coletar • R reiniciar
+      A/D ou ←/→ mover • W/↑/Espaço pular • J atacar • K rolar • L aparar • SHIFT dash • CTRL sprint • Q beber Estus • TAB inventário • E interagir/coletar • R reiniciar
     </div>
   </div>
 
@@ -167,6 +167,14 @@
             <div class="options-row">
               <span>K</span>
               <span class="options-value">Rolar</span>
+            </div>
+            <div class="options-row">
+              <span>SHIFT</span>
+              <span class="options-value">Dash</span>
+            </div>
+            <div class="options-row">
+              <span>CTRL</span>
+              <span class="options-value">Sprint</span>
             </div>
             <div class="options-row">
               <span>Rebind</span>
