Add boss encounter zones and expanded map

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="boss-bar hidden" id="bossBar" aria-live="polite">
-    <div class="boss-name">O PENITENTE DE FERRO</div>
+    <div class="boss-name" id="bossName">O PENITENTE DE FERRO</div>
     <div class="boss-track">
       <div id="bossHpFill" class="boss-fill"></div>
     </div>
