--- a/index.html
+++ b/index.html
@@ -303,6 +303,27 @@
           <h3>Créditos</h3>
           <p>IRON PENANCE é uma jornada criada para honrar a perseverança nas ruínas.</p>
         </div>
+        <div class="menu-text map-panel">
+          <h3>Mapa Oficial do Mundo</h3>
+          <p>Um único mundo contínuo, vertical e horizontal, sem loading entre salas.</p>
+          <figure class="map-figure">
+            <img
+              src="assets/mapa-gigante.svg"
+              alt="Mapa oficial do mundo de Iron Penance, mostrando zonas interconectadas e verticalidade intensa."
+              loading="lazy"
+            />
+            <figcaption>
+              Todas as zonas compartilham o mesmo plano cartesiano global. As transições apenas ajustam câmera e
+              spawn, mantendo o mundo vivo e explorável.
+            </figcaption>
+          </figure>
+          <ul class="map-guidelines">
+            <li>Rooms conectadas por laterais, verticais, quedas sem retorno e atalhos destraváveis.</li>
+            <li>Neblina escurece áreas não visitadas, removida ao explorar pela primeira vez.</li>
+            <li>Progressão com habilidades (double jump, wall jump, dash aéreo) e backtracking constante.</li>
+            <li>Boss rooms fecham portas, exibem HUD dedicado e não geram inimigos comuns.</li>
+          </ul>
+        </div>
         <div class="menu-text">
           <h3>Roadmap</h3>
           <ul>
