--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div id="gameRoot" class="hidden">
     <canvas id="game" width="1280" height="720" aria-label="Soulslike 2D"></canvas>
+    <div id="fogOverlay" aria-hidden="true"></div>
     <div id="hkHud" aria-live="polite">
       <div class="row hpRow" id="hpMasks"></div>
       <div class="row stamina" id="staminaRow" aria-hidden="true">
